kyverno/allow-icmp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-icmp
  namespace: voting-app
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - ports:
    - protocol: ICMP
  ingress:
  - ports:
    - protocol: ICMP
