kyverno/restrict-defaultnamespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-default-namespace
spec:
  validationFailureAction: enforce
  rules:
    - name: block-default-namespace
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Do not deploy in the default namespace."
        pattern:
          metadata:
            namespace: "!default"
